@@ -1,4 +1,7 @@
 
+2009-03-18 23:15 Ali aliov@xfce.org 
+	 * : Fix a bug in the inhibit interface signal
+
 2009-03-18 22:18 Ali aliov@xfce.org 
 	 * : Load relevent settings depending on the form factor the power manager is running on
 
